[gd_scene load_steps=3 format=2]

[ext_resource path="res://Screens/Lobby.gd" type="Script" id=1]
[ext_resource path="res://Screens/GenericScreen.tscn" type="PackedScene" id=2]

[node name="Lobby" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="VBoxContainer" parent="Content" index="0"]
margin_top = 120.0
margin_bottom = 480.0

[node name="HostIP" type="HBoxContainer" parent="Content/VBoxContainer" index="0"]
margin_right = 200.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="YourIP" type="Label" parent="Content/VBoxContainer/HostIP" index="0"]
margin_right = 49.0
margin_bottom = 14.0
text = "Your IP:"

[node name="IP" type="Label" parent="Content/VBoxContainer/HostIP" index="1"]
margin_left = 53.0
margin_right = 200.0
margin_bottom = 14.0
size_flags_horizontal = 3
align = 2

[node name="RoomMaster" type="HBoxContainer" parent="Content/VBoxContainer" index="1"]
margin_top = 18.0
margin_right = 200.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RMIP" type="Label" parent="Content/VBoxContainer/RoomMaster" index="0"]
margin_right = 93.0
margin_bottom = 14.0
text = "Room Master: "

[node name="Name" type="Label" parent="Content/VBoxContainer/RoomMaster" index="1"]
margin_left = 97.0
margin_right = 200.0
margin_bottom = 14.0
size_flags_horizontal = 3
align = 2

[node name="Start" type="Button" parent="Content/VBoxContainer" index="2"]
margin_top = 36.0
margin_right = 200.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="ScrollContainer" parent="Content/VBoxContainer" index="3"]
margin_top = 60.0
margin_right = 200.0
margin_bottom = 360.0
rect_min_size = Vector2( 200, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="VBoxContainer" parent="Content/VBoxContainer/Player" index="0"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
